_sass/Lightbox.scss
.has-lightbox {
  .photo {
    cursor: zoom-in;
    transition: opacity var(--transition-speed-medium) ease-in-out;
  }
}

.lightbox {
  display: flex;
  position: fixed;
  z-index: 999;
  top: 0;
  left: 0;
  width: var(--width-full);
  height: 100%;
  background-color: var(--color-overlay);
  opacity: var(--op-hidden);
  visibility: hidden;
  transition: opacity var(--transition-speed-medium) ease-in-out, visibility var(--transition-speed-medium) ease-in-out;

  &.hide-ui {

    .lightbox__button,
    .lightbox__caption {
      opacity: var(--op-hidden);
      visibility: hidden;
    }
  }

  &.is-active {
    opacity: 1;
    visibility: visible;

    .lightbox__content {
      transform: scale(1);
    }
  }

  &-image.is-loaded {
    opacity: 1;
  }

  &__caption {
    position: absolute;
    bottom: 1em;
    text-shadow: 1px 1px 1em var(--color-overlay);
    opacity: var(--op-hidden);
    visibility: hidden;
    transition: opacity var(--transition-speed-medium) ease-in-out, visibility var(--transition-speed-medium) ease-in-out;
    text-align: center;
    line-height: normal;

    &.is-visible {
      opacity: 1;
      visibility: visible;
    }
  }

  &__content {
    margin: auto;
    max-width: 90%;
    max-height: 90%;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  &__imageContainer {
    position: relative;
    width: var(--width-full);
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  &__image {
    max-width: 2880px;
    max-height: 95vh;
    object-fit: contain;
    opacity: var(--op-hidden);
    transition: opacity var(--transition-speed-medium) ease-in-out;
    border-radius: var(--br-subtle);
  }

  &__button {
    position: absolute;
    text-decoration: none;
    font-size: 18px;
    border: none;
    background-color: transparent;
    cursor: pointer;
    transition: opacity var(--transition-speed-medium) ease-in-out;
    -webkit-appearance: none;
    appearance: none;

    &:hover {
      opacity: var(--op-8);
    }

    &.is-prev {
      background: url('/img/icons/chevron-left.svg') no-repeat center;
      width: 32px;
      height: 32px;
      left: 1em;
      top: 50%;
      transform: translateY(-50%);
    }

    &.is-next {
      right: 1em;
      background: url('/img/icons/chevron-right.svg') no-repeat center;
      width: 32px;
      height: 32px;
      top: 50%;
      transform: translateY(-50%);
    }

    &.is-close {
      top: 1em;
      right: 1em;
      width: 28px;
      height: 28px;
      background: url('/img/icons/close.svg') no-repeat center;
    }
  }
}

@media all and (max-width: 1500px) {
  .lightbox__image {
    max-width: var(--width-full);
  }
}

